# VideoGames

./: App.js  Diploma_final.ipynb  EUSales.css  EUSales.jsx  JPSales.css  JPSales.jsx  LoginForm.jsx  LoginForm.module.css  NASales.css  NASales.jsx  OtherSales.css  OtherSales.jsx  SalesPredictionForm.css  SalesPredictionForm.jsx  alembic.ini  asset-manifest.json  bin_edges.pickle  category_mappings.json  good.csv  index.html  main.py  package-lock.json  package.json  prices.py  pyproject.toml  scraping.py  trends2.csv
static/css/: main.c05c7371.css  main.c05c7371.css.map
static/js/: 453.c7ed83c4.chunk.js  453.c7ed83c4.chunk.js.map  main.356eeb2b.js  main.356eeb2b.js.map  main.d4b921cb.js  main.d4b921cb.js.map  main.ec7c3f56.js  main.ec7c3f56.js.map  main.f2381a49.js  main.f2381a49.js.map
