[tool.poetry]
name = "pp4"
version = "0.1.0"
description = ""
authors = ["oleh17v <burik15v@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cors = "^1.0.1"
Django = "^4.0.4"
gym = "^0.26.2"
pytrends = "^4.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
